--- a/app/views/pages/app.html.haml
+++ b/app/views/pages/app.html.haml
@@ -5,7 +5,7 @@
   @meta_url          = "https://#{request.host_with_port}#{request.fullpath}"
 
 - content_for :additional_meta do
-  - locale_dir = I18n.locale.to_s.eql?("en") ? '' : '/' + I18n.locale.to_s
+  - locale_dir = (I18n.locale.to_s.eql?("en") or I18n.locale.to_s.eql?("en-GB")) ? '' : '/' + I18n.locale.to_s
   - canonicalHref = "https://#{request.host_with_port}#{locale_dir}/app"
   %link{rel: "canonical", href: canonicalHref}
   %meta{name: "url",            content: @meta_url}
