--- a/app/views/shared/_javascripts.html.haml
+++ b/app/views/shared/_javascripts.html.haml
@@ -10,6 +10,9 @@
 - if content_for? :javascripts
   = yield :javascripts
 
+:plain
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
+
 -#twitter remarketing
 -# %script{:type => "text/javascript", :src  => "//platform.twitter.com/oct.js"}
 -# %script{:type => "text/javascript"}
