--- a/app/views/shared/_js_templates.html.haml
+++ b/app/views/shared/_js_templates.html.haml
@@ -130,7 +130,7 @@
       .pane
         %span#short_link
         .fb-share-button{"data-href" => "", "data-layout" => "button"}
-        %a.twitter-share-button{href: "https://twitter.com/share", "data-url" => "", "data-size" => "large", "data-count" => "none", "data-dnt" => "true", "data-text" => ""}
+        %a.twitter-share-button{href: "https://twitter.com/share", "data-url" => "", "data-size" => "medium", "data-count" => "none", "data-dnt" => "true", "data-text" => ""}
           Tweet
         .g-plus{"data-action"=>"share", "data-href" => ""}
 
